Added some logos and service metadata.  Improved the JJ2000 viewer service.